modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/replica-limits/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8ReplicaLimits
metadata:
  name: test
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - apps
      kinds:
      - Deployment
  parameters:
    ranges:
    - minReplicas: 1
      maxReplicas: 3
