modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/replica-limits/rendered/test_samples/pods/002-disallowed-replicas-out-of-range.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: apps/v1
kind: Deployment
metadata:
    name: disallowed
    namespace: default
spec:
    containers:
        - image: nginx
          name: nginx
    replicas: 5
    selector:
        matchLabels:
            app: demo
    template:
        metadata:
            labels:
                app: demo
        spec:
            containers:
                - image: nginx
                  name: nginx
