modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/replica-limits/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8replicalimits
tests:
  - name: d8replicalimits
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: allowed-replicas-in-range
        object: test_samples/pods/001-allowed-replicas-in-range.yaml
        assertions:
          - violations: "no"
      - name: disallowed-replicas-out-of-range
        object: test_samples/pods/002-disallowed-replicas-out-of-range.yaml
        assertions:
          - violations: "yes"
